--- a/javajam.css
+++ b/javajam.css
@@ -1,17 +1,51 @@
-body { background-color: #FCEBB6; 
+body {background-color: #fcebb6;
+      background-image: url(background.gif);
       color: #221811;
-      font-family: Verdana, Arial, sans-serif;
-}
-header { background-color: #D2B48C;
-        text-align: center; }
-h1 { line-height: 200%; }
-nav { text-align: center; 
-     font-weight: bold; }
+      font-family: Verdana, Arial, sans-serif;}
+
+header {background-color: #D2B48C;
+        height: 150px;
+        background-image: "javajamlogo.jpg";
+        background-repeat: no-repeat;}
+
+main {padding-bottom: 2em;
+      padding-right: 2em;
+      padding-left: 2em;
+      display: block;}
+
+h1 {padding-top: 45px;
+    padding-left: 220px;
+    font-size: 3em;}
+
+h4 {background-color: #d2b48c;
+    font-size: 1.2em;
+    padding-left: .5em;
+    padding-bottom: .25em;}
+
+img {padding-left: 10px;
+     padding-right: 10px;}
+
+nav {text-align: center; 
+     font-weight: bold;
+     font-size: 1.5em;
+     padding-top: 10px;}
+
+nav a {text-decoration: none;}
+
 footer { background-color: #D2B48C;
        font-size: .60em;
 	   font-style: italic;
 	   text-align: center;
-}
+       padding-bottom: 10px;
+       border-top: solid 2px #221811;}
+
 #wrapper { width: 80%;
            margin-right: auto;
-		   margin-left: auto;}
+		   margin-left: auto;
+           background-color: #fef6c2;
+           min-width: 900px;
+           max-width: 1280px;
+           box-shadow: 2px 2px 2px 2px;}
+
+.details {padding-left: 20%;
+         padding-right: 20%;}
